// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`local site test event hooks 1`] = `
Array [
  Object {
    "file": "",
    "headers": Object {
      "content-length": "64",
      "content-type": "text/html; charset=utf-8",
      "location": "index.html",
      "vary": "Accept",
      "x-powered-by": "Express",
    },
    "ok": false,
    "request": Object {
      "headers": Object {
        "upgrade-insecure-requests": "1",
      },
      "method": "GET",
      "resourceType": "document",
    },
    "status": 302,
    "url": "http://localhost:18181/",
  },
  Object {
    "file": "http/localhost_18181/b/index.html",
    "headers": Object {
      "accept-ranges": "bytes",
      "cache-control": "public, max-age=0",
      "content-length": "4299",
      "content-type": "text/html; charset=UTF-8",
      "x-powered-by": "Express",
    },
    "ok": true,
    "request": Object {
      "headers": Object {
        "referer": "http://localhost:18181/index.html",
        "upgrade-insecure-requests": "1",
      },
      "method": "GET",
      "resourceType": "document",
    },
    "status": 200,
    "url": "http://localhost:18181/b/",
  },
  Object {
    "file": "http/localhost_18181/css/a.css",
    "headers": Object {
      "accept-ranges": "bytes",
      "cache-control": "public, max-age=0",
      "content-length": "132",
      "content-type": "text/css; charset=UTF-8",
      "x-powered-by": "Express",
    },
    "ok": true,
    "request": Object {
      "headers": Object {
        "referer": "http://localhost:18181/index.html",
      },
      "method": "GET",
      "resourceType": "stylesheet",
    },
    "status": 200,
    "url": "http://localhost:18181/css/a.css",
  },
  Object {
    "file": "http/localhost_18181/css/b.css",
    "headers": Object {
      "accept-ranges": "bytes",
      "cache-control": "public, max-age=0",
      "content-length": "78",
      "content-type": "text/css; charset=UTF-8",
      "x-powered-by": "Express",
    },
    "ok": true,
    "request": Object {
      "headers": Object {
        "referer": "http://localhost:18181/b/",
      },
      "method": "GET",
      "resourceType": "stylesheet",
    },
    "status": 200,
    "url": "http://localhost:18181/css/b.css",
  },
  Object {
    "file": "http/localhost_18181/images/%25E4%25B8%25AD%25E6%2596%2587.gif",
    "headers": Object {
      "accept-ranges": "bytes",
      "cache-control": "public, max-age=0",
      "content-length": "2870",
      "content-type": "image/gif",
      "x-powered-by": "Express",
    },
    "ok": true,
    "request": Object {
      "headers": Object {
        "referer": "http://localhost:18181/index.html",
      },
      "method": "GET",
      "resourceType": "image",
    },
    "status": 200,
    "url": "http://localhost:18181/images/%E4%B8%AD%E6%96%87.gif",
  },
  Object {
    "file": "http/localhost_18181/index.html",
    "headers": Object {
      "accept-ranges": "bytes",
      "cache-control": "public, max-age=0",
      "content-length": "579",
      "content-type": "text/html; charset=UTF-8",
      "x-powered-by": "Express",
    },
    "ok": true,
    "request": Object {
      "headers": Object {
        "upgrade-insecure-requests": "1",
      },
      "method": "GET",
      "resourceType": "document",
    },
    "status": 200,
    "url": "http://localhost:18181/index.html",
  },
  Object {
    "file": "http/localhost_18181/js/a.js",
    "headers": Object {
      "accept-ranges": "bytes",
      "cache-control": "public, max-age=0",
      "content-length": "349",
      "content-type": "application/javascript; charset=UTF-8",
      "x-powered-by": "Express",
    },
    "ok": true,
    "request": Object {
      "headers": Object {
        "referer": "http://localhost:18181/index.html",
      },
      "method": "GET",
      "resourceType": "script",
    },
    "status": 200,
    "url": "http://localhost:18181/js/a.js?ver=1",
  },
]
`;

exports[`local site test networkidle2 1`] = `
Array [
  Object {
    "file": "",
    "headers": Object {
      "content-length": "64",
      "content-type": "text/html; charset=utf-8",
      "location": "index.html",
      "vary": "Accept",
      "x-powered-by": "Express",
    },
    "ok": false,
    "request": Object {
      "headers": Object {
        "upgrade-insecure-requests": "1",
      },
      "method": "GET",
      "resourceType": "document",
    },
    "status": 302,
    "url": "http://localhost:18181/",
  },
  Object {
    "file": "http/localhost_18181/b/index.html",
    "headers": Object {
      "accept-ranges": "bytes",
      "cache-control": "public, max-age=0",
      "content-length": "4299",
      "content-type": "text/html; charset=UTF-8",
      "x-powered-by": "Express",
    },
    "ok": true,
    "request": Object {
      "headers": Object {
        "referer": "http://localhost:18181/index.html",
        "upgrade-insecure-requests": "1",
      },
      "method": "GET",
      "resourceType": "document",
    },
    "status": 200,
    "url": "http://localhost:18181/b/",
  },
  Object {
    "file": "http/localhost_18181/css/a.css",
    "headers": Object {
      "accept-ranges": "bytes",
      "cache-control": "public, max-age=0",
      "content-length": "132",
      "content-type": "text/css; charset=UTF-8",
      "x-powered-by": "Express",
    },
    "ok": true,
    "request": Object {
      "headers": Object {
        "referer": "http://localhost:18181/index.html",
      },
      "method": "GET",
      "resourceType": "stylesheet",
    },
    "status": 200,
    "url": "http://localhost:18181/css/a.css",
  },
  Object {
    "file": "http/localhost_18181/css/b.css",
    "headers": Object {
      "accept-ranges": "bytes",
      "cache-control": "public, max-age=0",
      "content-length": "78",
      "content-type": "text/css; charset=UTF-8",
      "x-powered-by": "Express",
    },
    "ok": true,
    "request": Object {
      "headers": Object {
        "referer": "http://localhost:18181/b/",
      },
      "method": "GET",
      "resourceType": "stylesheet",
    },
    "status": 200,
    "url": "http://localhost:18181/css/b.css",
  },
  Object {
    "file": "http/localhost_18181/images/%25E4%25B8%25AD%25E6%2596%2587.gif",
    "headers": Object {
      "accept-ranges": "bytes",
      "cache-control": "public, max-age=0",
      "content-length": "2870",
      "content-type": "image/gif",
      "x-powered-by": "Express",
    },
    "ok": true,
    "request": Object {
      "headers": Object {
        "referer": "http://localhost:18181/index.html",
      },
      "method": "GET",
      "resourceType": "image",
    },
    "status": 200,
    "url": "http://localhost:18181/images/%E4%B8%AD%E6%96%87.gif",
  },
  Object {
    "file": "http/localhost_18181/images/dotbg118.gif",
    "headers": Object {
      "accept-ranges": "bytes",
      "cache-control": "public, max-age=0",
      "content-length": "2870",
      "content-type": "image/gif",
      "x-powered-by": "Express",
    },
    "ok": true,
    "request": Object {
      "headers": Object {
        "referer": "http://localhost:18181/css/b.css",
      },
      "method": "GET",
      "resourceType": "image",
    },
    "status": 200,
    "url": "http://localhost:18181/images/dotbg118.gif",
  },
  Object {
    "file": "http/localhost_18181/index.html",
    "headers": Object {
      "accept-ranges": "bytes",
      "cache-control": "public, max-age=0",
      "content-length": "579",
      "content-type": "text/html; charset=UTF-8",
      "x-powered-by": "Express",
    },
    "ok": true,
    "request": Object {
      "headers": Object {
        "upgrade-insecure-requests": "1",
      },
      "method": "GET",
      "resourceType": "document",
    },
    "status": 200,
    "url": "http://localhost:18181/index.html",
  },
  Object {
    "file": "http/localhost_18181/js/a.js",
    "headers": Object {
      "accept-ranges": "bytes",
      "cache-control": "public, max-age=0",
      "content-length": "349",
      "content-type": "application/javascript; charset=UTF-8",
      "x-powered-by": "Express",
    },
    "ok": true,
    "request": Object {
      "headers": Object {
        "referer": "http://localhost:18181/index.html",
      },
      "method": "GET",
      "resourceType": "script",
    },
    "status": 200,
    "url": "http://localhost:18181/js/a.js?ver=1",
  },
]
`;

exports[`local site test onload 1`] = `
Array [
  Object {
    "file": "",
    "headers": Object {
      "content-length": "64",
      "content-type": "text/html; charset=utf-8",
      "location": "index.html",
      "vary": "Accept",
      "x-powered-by": "Express",
    },
    "ok": false,
    "request": Object {
      "headers": Object {
        "upgrade-insecure-requests": "1",
      },
      "method": "GET",
      "resourceType": "document",
    },
    "status": 302,
    "url": "http://localhost:18181/",
  },
  Object {
    "file": "http/localhost_18181/b/index.html",
    "headers": Object {
      "accept-ranges": "bytes",
      "cache-control": "public, max-age=0",
      "content-length": "224415",
      "content-type": "text/html; charset=UTF-8",
      "x-powered-by": "Express",
    },
    "ok": true,
    "request": Object {
      "headers": Object {
        "referer": "http://localhost:18181/index.html",
        "upgrade-insecure-requests": "1",
      },
      "method": "GET",
      "resourceType": "document",
    },
    "status": 200,
    "url": "http://localhost:18181/b/",
  },
  Object {
    "file": "http/localhost_18181/index.html",
    "headers": Object {
      "accept-ranges": "bytes",
      "cache-control": "public, max-age=0",
      "content-length": "579",
      "content-type": "text/html; charset=UTF-8",
      "x-powered-by": "Express",
    },
    "ok": true,
    "request": Object {
      "headers": Object {
        "upgrade-insecure-requests": "1",
      },
      "method": "GET",
      "resourceType": "document",
    },
    "status": 200,
    "url": "http://localhost:18181/index.html",
  },
  Object {
    "file": "http/localhost_18181/js/a.js",
    "headers": Object {
      "accept-ranges": "bytes",
      "cache-control": "public, max-age=0",
      "content-length": "349",
      "content-type": "application/javascript; charset=UTF-8",
      "x-powered-by": "Express",
    },
    "ok": true,
    "request": Object {
      "headers": Object {
        "referer": "http://localhost:18181/index.html",
      },
      "method": "GET",
      "resourceType": "script",
    },
    "status": 200,
    "url": "http://localhost:18181/js/a.js?ver=1",
  },
]
`;
